--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -14,7 +14,7 @@ en:
       last_attempt: "You have one more attempt before your account is locked."
       not_found_in_database: "Invalid %{authentication_keys} or password."
       timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "Please log in or sign up before continuing."
+      unauthenticated: "Please sign in or sign up before continuing."
       unconfirmed: "Please confirm your email address before continuing."
     mailer:
       confirmation_instructions:
